--- a/index.html
+++ b/index.html
@@ -788,12 +788,50 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            nav {
+                padding: 0.5rem 1rem;
+            }
+
+            .nav-container {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0.5rem;
+            }
+
+            .nav-brand {
+                font-size: 1.2rem;
+            }
+
+            .nav-links {
+                flex-wrap: wrap;
+                gap: 0.5rem;
+                font-size: 0.75rem;
+                width: 100%;
+                justify-content: flex-start;
+            }
+
+            .nav-links li {
+                margin: 0;
+            }
+
+            .nav-links a {
+                padding: 0.25rem 0.5rem;
+                font-size: 0.75rem;
+            }
+
+            .hero {
+                padding: 3rem 1rem 2rem;
+            }
+
             .hero h1 {
-                font-size: 2.5rem;
+                font-size: 1.8rem;
+                margin-bottom: 0.75rem;
+                line-height: 1.3;
             }
 
             .hero-subtitle {
-                font-size: 1rem;
+                font-size: 0.9rem;
+                margin-bottom: 1.5rem;
             }
 
             .about {
@@ -808,11 +846,6 @@
                 font-size: 2rem;
             }
 
-            .nav-links {
-                gap: 1rem;
-                font-size: 0.9rem;
-            }
-
             .cta-buttons {
                 flex-direction: column;
                 gap: 1rem;
@@ -820,10 +853,8 @@
 
             .btn {
                 width: 100%;
-            }
-
-            .hero {
-                padding: 3rem 1rem;
+                padding: 0.75rem 1.5rem;
+                font-size: 0.9rem;
             }
 
             .projects-grid {
