--- a/index.html
+++ b/index.html
@@ -800,23 +800,24 @@
 
             .nav-brand {
                 font-size: 1.2rem;
-            }
-
-            .nav-links {
-                flex-wrap: wrap;
-                gap: 0.5rem;
-                font-size: 0.75rem;
-                width: 100%;
-                justify-content: flex-start;
-            }
+            }        .nav-links {
+            flex-wrap: wrap;
+            gap: 0.25rem;
+            font-size: 0.7rem;
+            width: 100%;
+            justify-content: flex-start;
+            padding: 0;
+        }
 
             .nav-links li {
                 margin: 0;
+                padding: 0;
             }
 
             .nav-links a {
-                padding: 0.25rem 0.5rem;
-                font-size: 0.75rem;
+                padding: 0.2rem 0.35rem;
+                font-size: 0.7rem;
+                white-space: nowrap;
             }
 
             .hero {
