--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,12 @@
                 <h2>Let's Connect</h2>
                 <p>I'm always interested in hearing about new projects and opportunities. Feel free to reach out if you'd like to discuss IT solutions or collaboration.</p>
                 <div class="download-cv">
-                    <a href="https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/16fe6c61-dd25-46b1-b834-54271b6872c4" class="btn btn-primary" download="Ibrahim_Guliyev_CV.pdf">📄 Download CV</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1m23dgRRRs67mj2okRMIEerujGBJ5Waqn"
+   class="btn btn-primary"
+   download="Ibrahim_Guliyev_CV.pdf">
+    📄 Download CV
+</a>
+
                 </div>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/ibrahim-guliyev/" target="_blank" title="LinkedIn">🔗</a>
