--- a/index.html
+++ b/index.html
@@ -826,8 +826,7 @@
     <!-- Nav -->
     <nav>
         <a href="#" class="nav-brand">
-            <img src="C:/Users/Cupcake/.gemini/antigravity/brain/8327db44-e868-43b1-8101-2f7428d88472/ig_logo_monogram_1765966833013.png"
-                alt="IG Logo" class="nav-brand-logo">
+            <img src="./assets/logo.png" alt="IG Logo" class="nav-brand-logo">
         </a>
 
         <div class="nav-right">
@@ -870,8 +869,7 @@
         </div>
         <div class="hero-image-wrapper">
             <div class="hero-blob"></div>
-            <img src="https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/d67cdaf2-0362-42bf-a214-0c6a1f5ca425"
-                alt="Ibrahim Guliyev" class="hero-img">
+            <img src="./assets/profile.jpg" alt="Ibrahim Guliyev" class="hero-img">
         </div>
     </section>
 
@@ -918,8 +916,7 @@
                         defense</strong>, ensuring compliance with SLAs and maintaining trust with B2B clients.
                 </p>
             </div>
-            <img src="C:/Users/Cupcake/.gemini/antigravity/brain/8327db44-e868-43b1-8101-2f7428d88472/cloud_infrastructure_1765961235718.png"
-                alt="Tech Abstract" class="philosophy-img">
+            <img src="./assets/project2.png" alt="Tech Abstract" class="philosophy-img">
         </div>
     </section>
 
@@ -930,8 +927,7 @@
             <!-- Project 1 -->
             <div class="project-card reveal stagger-1">
                 <div class="project-img-wrapper">
-                    <img src="C:/Users/Cupcake/.gemini/antigravity/brain/8327db44-e868-43b1-8101-2f7428d88472/biometric_access_control_1765961146303.png"
-                        alt="Biometric System" class="project-img">
+                    <img src="./assets/project1.png" alt="Biometric System" class="project-img">
                 </div>
                 <div class="project-content">
                     <h3>Suprema Biometric Security</h3>
@@ -948,8 +944,7 @@
             <!-- Project 2 -->
             <div class="project-card reveal stagger-2">
                 <div class="project-img-wrapper">
-                    <img src="C:/Users/Cupcake/.gemini/antigravity/brain/8327db44-e868-43b1-8101-2f7428d88472/cloud_infrastructure_1765961235718.png"
-                        alt="Cloud Infrastructure" class="project-img">
+                    <img src="./assets/project2.png" alt="Cloud Infrastructure" class="project-img">
                 </div>
                 <div class="project-content">
                     <h3>Enterprise Infrastructure</h3>
@@ -966,8 +961,7 @@
             <!-- Project 3 -->
             <div class="project-card reveal stagger-3">
                 <div class="project-img-wrapper">
-                    <img src="C:/Users/Cupcake/.gemini/antigravity/brain/8327db44-e868-43b1-8101-2f7428d88472/business_dashboard_erp_1765961341686.png"
-                        alt="ERP Dashboard" class="project-img">
+                    <img src="./assets/project3.png" alt="ERP Dashboard" class="project-img">
                 </div>
                 <div class="project-content">
                     <h3>Business Process Optimization</h3>
