--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ibrahim Guliyev - IT Project Engineer & Support Specialist</title>
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%236366f1'/%3E%3Ctext x='50' y='65' font-size='70' font-weight='bold' fill='white' text-anchor='middle' font-family='Arial'%3EIG%3C/text%3E%3C/svg%3E">
-    <script src="https://unpkg.com/feather-icons"></script>
+
     <style>
         /* --- Animations & Transitions --- */
 
@@ -1081,6 +1081,7 @@
         <p>&copy; 2025 Ibrahim Guliyev. Built with 💜 & Code.</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script>
         // Init Icons
         feather.replace();
